--- a/vue-masonry-plugin-demo-master/index.html
+++ b/vue-masonry-plugin-demo-master/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>vue-masonry-demo</title>
-    <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.0.0/masonry.pkgd.min.js"></script>
+    <link rel='stylesheet' href='./static/selectables.css' type='text/css' />
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.0.0/masonry.pkgd.min.js"></script>
+    <script async defer src="./static/selectables.js"></script>
   </body>
 </html>
