--- a/vue-masonry-plugin-demo-master/index.html
+++ b/vue-masonry-plugin-demo-master/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-masonry-demo</title>
+    <title>echimo-vision</title>
     <link rel='stylesheet' href='./static/selectables.css' type='text/css' />
   </head>
   <body>
