이미지 확대 팝업 추가.

--- a/vue-masonry-plugin-demo-master/index.html
+++ b/vue-masonry-plugin-demo-master/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>image-scraper</title>
     <link rel='stylesheet' href='./static/selectables.css' type='text/css' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.3.5/tiny-slider.css">
   </head>
   <body>
     <div id="app"></div>
