--- a/vue-masonry-plugin-demo-master/index.html
+++ b/vue-masonry-plugin-demo-master/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>image-scraper</title>
-    <link rel='stylesheet' href='./static/selectables.css' type='text/css' />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.3.5/tiny-slider.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-    <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.0.0/masonry.pkgd.min.js"></script>
-    <script async defer src="./static/selectables.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyAelvPyd1OH2axLZz5dKzaFEC-Cl0R__sc",
-        authDomain: "image-scraper-5ae3b.firebaseapp.com",
-        databaseURL: "https://image-scraper-5ae3b.firebaseio.com",
-        projectId: "image-scraper-5ae3b",
-        storageBucket: "",
-        messagingSenderId: "554309658133"
-      };
-      firebase.initializeApp(config);
+
+<head>
+  <meta charset="utf-8">
+  <title>image-scraper</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92186889-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-92186889-3');
     </script>
-  </body>
+
+  <link rel='stylesheet' href='./static/selectables.css' type='text/css' />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.3.5/tiny-slider.css">
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+  <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.0.0/masonry.pkgd.min.js"></script>
+  <script async defer src="./static/selectables.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAelvPyd1OH2axLZz5dKzaFEC-Cl0R__sc",
+      authDomain: "image-scraper-5ae3b.firebaseapp.com",
+      databaseURL: "https://image-scraper-5ae3b.firebaseio.com",
+      projectId: "image-scraper-5ae3b",
+      storageBucket: "",
+      messagingSenderId: "554309658133"
+    };
+    firebase.initializeApp(config);
+
+  </script>
+</body>
+
 </html>
